test/Fail/WrongBuiltinUnit.err
WrongBuiltinUnit.agda:7.1-26: error: [GenericError]
Builtin UNIT must be a singleton record type
when checking the pragma BUILTIN UNIT Bool
